feat(Tool Studio): add tool specification export
Signed-off-by: Jemin Huh <hjm1980@gmail.com>